--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>com.example</groupId>
     <artifactId>docker_jenkins_integration_sample</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
